[package]
name = "nextdns-analytics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
clap = "2.33"
log = "0.4"
env_logger = "0.9"
diesel = { version = "1.4.0", features = ["postgres"] }
rayon = "1.5"
thiserror = "1.0"
